# mynij-proxy

./: Makefile  Procfile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml
reference/: with-proxy.txt  without-proxy.txt
src/: mynij_proxy.py
tests/: test_proxy.py
