[tool.poetry]
name = "mynij-proxy"
version = "0.1.0"
description = ""
authors = ["Stefane Fermigier <sf@fermigier.com>"]

packages = [{ include = "*", from = "src" }]


[tool.poetry.dependencies]
python = "^3.9"

httpx = "^0.18.1"
gunicorn = "^20.1.0"
uvicorn = "^0.14"
uvloop = "^0.15.2"
starlette = "^0.16"
httptools = "*"


[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = "^21.4b2"
codecov = "^2.1.12"
honcho = "*"
isort = "^5.8.0"
pytest = "^6.2.4"
requests = "^2.25.1"
safety = "^1.10.3"
flake8 = "^3.9.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
